# phenix-stitch

./: .gitignore  .tend.json  Cargo.toml  README.md  api-cleanup-inventory.txt  api-legacy-inventory.txt  flake.nix  maintenance.nix
.github/: cargo-lock.gz.b64.00  cargo-lock.gz.b64.01  pr2.patch.b64.00  pr2.patch.b64.01  pr2.patch.b64.02  pr2.patch.b64.03  pr2.patch.b64.04  pr2.patch.b64.05  pr2.patch.b64.06  pr2.patch.b64.07  pr2.patch.b64.08  pr2.patch.gz.b64.00  pr2.patch.gz.b64.01  pr2.patch.gz.b64.01a  pr2.patch.gz.b64.01b0  pr2.patch.gz.b64.01b1  pr2.patch.gz.b64.01b2  pr2.patch.gz.b64.01b3  pr2.patch.gz.b64.02  pr3.patch.gz.b64.00  pr3.patch.gz.b64.01  pr3.patch.gz.b64.02  pr3.patch.gz.b64.03
.github/scripts/: apply-stitch-qa-errors.py  apply-stitch-qa-exec.py  apply-stitch-qa-p1.py  apply-stitch-qa-roots.py  apply-stitch-qa-time.py  apply_publication_retry.py  apply_workloop_followups.py  apply_workloop_lifecycle_invariants.py  fix_publication_clippy.py
.github/workflows/: api-cleanup-agent.yml  (+24 more)
.phenix-agent-state/: architecture-contract.yaml  architecture-review.yaml  handoff-implementer-repair.yaml  implementation-plan.yaml  implementation-summary.yaml  planned-changes.yaml  planner-output.yaml  request.md  run-ledger.yaml  verification-checkpoint.yaml  verification-ledger.yaml  verification-report.yaml
crates/stitch-mcp/: Cargo.toml
crates/stitch-mcp/src/: main.rs  tools.rs
docs/: dag-generation-strategy.md  tend-boundary.md
modules/: flake-module.nix  package.nix  standalone.nix
tools/: api_cleanup.py  graph_cleanup.py  graph_cleanup_fix.py
(+35 files in other folders)
